--- a/koreacovid.Rmd
+++ b/koreacovid.Rmd
@@ -72,7 +72,7 @@ rowPerc(table1)
 colPerc(table1)
 ```
   
-The numerical results show out of 100, males make up 60% of covid related deaths, compared to females at 36%. This also shows males are teice as likely to die from covid compared o females.
+The numerical results show out of 100, males make up 60% of covid related deaths, compared to females at 36%. This also shows males are twice as likely to die from covid compared to females.
 
 ## Inferential results 
 
